# payload-agents

./: .gitignore  .release-please-manifest.json  CLAUDE.md  LICENSE  README.md  biome.json  package.json  pnpm-lock.yaml  release-please-config.json  tsconfig.base.json  tsconfig.json  turbo.json  vitest.workspace.ts
.changeset/: agent-internal-list-endpoint.md  agent-telegram-interface.md  agent-ui-ag-ui-migration.md  agent-ui-floating-chat-polish.md  agno-schema-shared.md  autoembed-only.md  channels-agnostic.md  channels-bind-hardening.md  chat-agent-shadcn-theme-inline.md  chat-history-nested-button.md  config.json  decouple-tenancy-from-session-id.md  devin-review-default-config-and-batch-query.md  documents-rewrite-same-origin.md  documents-self-fetch-localhost.md  documents-worker-cleanup.md  drop-reload-http-client.md  export-metrics-plugin-result.md  extract-oss-packages.md  extract-tenant-id-with-req.md  fine-ways-act.md  fix-batch-fetch-pg-array-param.md  fix-extract-tenant-cookie.md  fix-runtime-internal-auth.md  fix-session-ownership.md  fix-sessions-limit-cap.md  fix-silent-failures.md  funky-baboons-talk.md  indexer-default-columns-precedence.md  indexer-outage-status.md  llamaparse-mode-rename.md  mcp-typesense-folder-filter.md  mcp-typesense-taxonomy-only-auth.md  multi-tenant-self-heal-metadata.md  orange-pianos-find.md  parse-result-internal-endpoint.md  payload-agents-core-folder-relationship.md  payload-documents-devin-review-fixes.md  payload-documents-initial.md  payload-documents-parse-button-always-visible.md  (+15 more)
.devcontainer/: Dockerfile  check-services.sh  devcontainer.env  devcontainer.env.example  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml  publish-python.yml  release-please.yml  release.yml
apps/mcp/: CHANGELOG.md  README.md  package.json  tsconfig.json
apps/mcp/src/: index.ts
apps/server/: .env.example  next.config.mjs  package.json  tsconfig.json
apps/server/src/: payload-types.ts  payload.config.ts
apps/server/src/collections/: Media.ts  Posts.ts  Taxonomies.ts  Users.ts
apps/server/src/components/: floating-chat-wrapper.tsx  user-context.tsx  zetesis-logo.tsx
apps/server/src/modules/: get-payload.ts
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  pyrightconfig.json
backend/agno-agent/: README.md  pyproject.toml
backend/agno-agent-builder/: CHANGELOG.md  README.md  pyproject.toml
backend/agno-agent-builder/agno_agent_builder/: __init__.py  agui_routes.py  app.py  builder.py  config.py  db.py  dependencies.py  exceptions.py  health.py  identity_bind_middleware.py  instructions.py  logging.py  middleware.py  registry.py  reload_listener.py  telegram_bind_middleware.py  telegram_loader.py  telemetry.py
backend/agno-agent-builder/agno_agent_builder/channels/: __init__.py  fetch.py  telegram.py  types.py  whatsapp.py
backend/agno-agent-builder/agno_agent_builder/channels/discord/: __init__.py  interface.py  loader.py  outbound_media.py  verification.py
backend/agno-agent-builder/agno_agent_builder/channels/teams/: __init__.py  attachments.py  interface.py  loader.py  outbound_media.py  verification.py
backend/agno-agent-builder/agno_agent_builder/sources/: __init__.py  base.py  payload.py  types.py
backend/agno-agent-builder/examples/teams-manifest/: README.md  manifest.template.json  package.sh
backend/agno-agent-builder/tests/: conftest.py  test_builder.py  test_db.py  test_discord_attachments.py  test_exceptions.py  test_outbound_media.py  test_payload_source.py  test_reload_listener.py  test_teams_attachments.py  test_teams_channel.py  test_teams_interface_http.py
backend/agno-agent/agno_agent/: __init__.py  builder.py  db.py  dependencies.py  exceptions.py  health.py  instructions.py  logging.py  main.py  registry.py  reload_listener.py  settings.py
backend/agno-agent/tests/: conftest.py  test_builder.py  test_db.py  test_exceptions.py  test_reload_listener.py
backend/agno-microsoft-teams/: CHANGELOG.md  README.md  pyproject.toml
backend/agno-microsoft-teams/agno_microsoft_teams/: __init__.py  attachments.py  interface.py  outbound_media.py  verification.py
backend/agno-microsoft-teams/tests/: test_attachments.py  test_interface_http.py  test_outbound_media.py
backend/payload-documents-worker/: README.md  pyproject.toml
backend/payload-documents-worker-builder/: CHANGELOG.md  README.md  pyproject.toml
backend/payload-documents-worker-builder/payload_documents_worker_builder/: __init__.py  app.py  broker.py  config.py  http.py  lifecycle.py
backend/payload-documents-worker-builder/payload_documents_worker_builder/clients/: __init__.py  _errors.py  llama_parse.py  payload.py  types.py
backend/payload-documents-worker-builder/payload_documents_worker_builder/tasks/: __init__.py  parse_document.py
backend/payload-documents-worker/payload_documents_worker/: __init__.py  main.py  settings.py
backend/payload-worker/: README.md  pyproject.toml
backend/payload-worker-builder/: README.md  pyproject.toml
backend/payload-worker-builder/payload_worker_builder/: __init__.py  app.py  broker.py  http.py  lifecycle.py
backend/payload-worker-builder/payload_worker_builder/clients/: __init__.py  llama_parse.py
backend/payload-worker-builder/payload_worker_builder/tasks/: __init__.py  parse_document.py
backend/payload-worker/payload_worker/: __init__.py  main.py  settings.py
docs/: AGNO_PAYLOAD_CONTRACT.md
docs/architecture/: npm-publishability.md  payload-cast-patterns.md  type-audit-playbook.md  typescript-monorepo-types.md
services/agent-runtime/: Dockerfile  README.md  pyproject.toml  pyrightconfig.json
services/agent-runtime/agent_runtime/: builder.py  config.py  db.py  dependencies.py  exceptions.py  health.py  instructions.py  logging.py  main.py  middleware.py  registry.py  reload_listener.py  schemas.py
services/agent-runtime/docs/: quality-roadmap.md
services/agent-runtime/tests/: conftest.py  test_builder.py  test_db.py  test_exceptions.py  test_health.py  test_registry.py  test_reload.py  test_reload_listener.py
(+34 files in other folders)
