[project]
name = "agno-agent-builder"
version = "0.1.7"
description = "Parametrizable Agno-based agent runtime — FastAPI factory with pluggable agent sources, multi-tenant headers, and LISTEN/NOTIFY hot reload."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Zetesis Labs" }]
keywords = ["agno", "agent", "fastapi", "llm", "rag", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "ag-ui-protocol>=0.1.13",
    "agno[anthropic,mcp,openai,os,postgres,telegram]>=2.6.0",
    "agno-microsoft-teams",
    "cryptography>=42.0",
    "fastapi>=0.115",
    "httpx>=0.28",
    "langfuse>=3.0",
    "openinference-instrumentation-agno>=0.1",
    "opentelemetry-exporter-otlp>=1.35",
    "opentelemetry-sdk>=1.35",
    "psycopg[binary]>=3.2",
    "pydantic>=2.9",
    "structlog>=24.1",
    "uvicorn[standard]>=0.34",
]

[project.urls]
Homepage = "https://github.com/Zetesis-Labs/PayloadAgents"
Repository = "https://github.com/Zetesis-Labs/PayloadAgents"
Issues = "https://github.com/Zetesis-Labs/PayloadAgents/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agno_agent_builder"]

[tool.hatch.build.targets.wheel.force-include]
"agno_agent_builder/py.typed" = "agno_agent_builder/py.typed"

[dependency-groups]
dev = [
    "anyio>=4.13.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
