[project]
name = "agno-agent"
version = "0.1.0"
description = "Default reference consumer of agno-agent-builder — env-loaded settings + Payload source, runs in the devcontainer."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Zetesis Labs" }]
dependencies = [
    "agno-agent-builder",
    "pydantic-settings>=2.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agno_agent"]
