[project]
name = "agno-microsoft-teams"
version = "0.1.0"
description = "Microsoft Teams / Bot Framework interface for Agno agents."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Zetesis Labs" }]
keywords = ["agno", "teams", "microsoft-teams", "bot-framework", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "agno>=2.6.0",
    "cryptography>=42.0",
    "fastapi>=0.115",
    "httpx>=0.28",
    "msal>=1.30",
    "pyjwt[crypto]>=2.8",
    "structlog>=24.1",
]

[project.urls]
Homepage = "https://github.com/Zetesis-Labs/PayloadAgents"
Repository = "https://github.com/Zetesis-Labs/PayloadAgents"
Issues = "https://github.com/Zetesis-Labs/PayloadAgents/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agno_microsoft_teams"]

[tool.hatch.build.targets.wheel.force-include]
"agno_microsoft_teams/py.typed" = "agno_microsoft_teams/py.typed"

[dependency-groups]
dev = [
    "anyio>=4.13.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
