[project]
name = "payload-documents-worker"
version = "0.1.0"
description = "Default consumer of payload-documents-worker-builder for the PayloadAgents devcontainer."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Zetesis Labs" }]
dependencies = [
    "payload-documents-worker-builder",
    "pydantic-settings>=2.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["payload_documents_worker"]
