[project]
name = "payload-worker-builder"
version = "0.1.0"
description = "Parametrizable taskiq-based worker for Payload CMS — FastAPI kick app + Postgres LISTEN/NOTIFY broker + LlamaParse parse-document task."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Zetesis Labs" }]
keywords = ["payload", "worker", "taskiq", "llamaparse", "postgres"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.28",
    "pydantic>=2.9",
    "structlog>=24.1",
    "taskiq>=0.11.18",
    "taskiq-redis>=1.1.1",
    "uvicorn[standard]>=0.34",
]

[project.urls]
Homepage = "https://github.com/Zetesis-Labs/PayloadAgents"
Repository = "https://github.com/Zetesis-Labs/PayloadAgents"
Issues = "https://github.com/Zetesis-Labs/PayloadAgents/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["payload_worker_builder"]

[tool.hatch.build.targets.wheel.force-include]
"payload_worker_builder/py.typed" = "payload_worker_builder/py.typed"
